# StatLib

./: .gitignore  .travis.yml  CMakeLists.txt  readme.md
src/: statlib.cpp
